"added conditional rendering test"

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+
+const pageTitle = 'Hondenkunde';
 ---
-<Layout title="Welcome to Astro.">
+<Layout title={pageTitle}>
 	<main>
 		<a href="/">Home</a>
         <a href="/about/">About</a>
@@ -35,7 +37,7 @@ import Card from '../components/Card.astro';
 				</linearGradient>
 			</defs>
 		</svg>
-		<h1>Welkom bij <span class="text-gradient">Hondenkunde</span></h1>
+		<h1>Welkom bij <span class="text-gradient">{pageTitle}</span></h1>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
