--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,40 +1,40 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+
+const pageTitle = "About";
+
+const identity = {
+  firstName: "Bart",
+  country: "Nederland",
+  occupation: "Programmeur",
+  hobbies: ["Kluifjes", "Speeltjes", "Verzorging"],
+};
+
+const products = ["Kluifjes", "Speeltjes", "Verzorging"];
 ---
-<Layout title="Welcome to Astro.">
+<Layout title={pageTitle}>
 	<main>
         <a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
 		<h1>
-            <span class="text-gradient">About</span>
+            <span class="text-gradient">{pageTitle}</span>
         </h1>
 		<p class="instructions">
 			Hondenkunde is opgericht om producten die echt goed zijn te promoten.<br />
 			<strong>Tip:</strong> Bekijk de filmpjes van onze Friese Stabij Arti die alle producten met veel plezier test.
 		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
+		<p>Here are a few facts about me:</p>
+			<ul>
+  				<li>My name is {identity.firstName}.</li>
+  				<li>I live in {identity.country === "Nederland" && identity.country} and I work as a {identity.occupation}.</li>
+  				{identity.hobbies.length >= 2 &&
+   				 <li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+  			}
+			</ul>
+		<p>Onze producten:</p>
+		<ul>
+  			{products.map((skill) => <li>{skill}</li>)}
 		</ul>
 	</main>
 </Layout>
