--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,41 +1,25 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+
+const pageTitle = "Blog";
 ---
-<Layout title="Welcome to Astro.">
+<Layout title={pageTitle}>
 	<main>
         <a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
 		<h1>
-            <span class="text-gradient">Blog</span>
+            <span class="text-gradient">{pageTitle}</span>
         </h1>
 		<p class="instructions">
-			Hondenkunde is opgericht om producten die echt goed zijn te promoten.<br />
+			Hondenkunde blogs. De blogs op deze pagina geven een indepth kijkje in alle producten<br />
 			<strong>Tip:</strong> Bekijk de filmpjes van onze Friese Stabij Arti die alle producten met veel plezier test.
 		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
+		<ul>
+            <li><a href="/posts/post-1/">Post 1</a></li>
+            <li><a href="/posts/post-2/">Post 2</a></li>
+            <li><a href="/posts/post-3/">Post 3</a></li>
+        </ul>
 	</main>
 </Layout>
 
