added navbar component

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
 
 const pageTitle = "About";
 
@@ -15,11 +16,9 @@ const products = ["Kluifjes", "Speeltjes", "Verzorging"];
 
 const productColor = 'navy';
 ---
+<Navigation/>
 <Layout title={pageTitle}>
 	<main>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
 		<h1>
             <span class="text-gradient">{pageTitle}</span>
         </h1>
