--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import '../styles/global.css';
+import Navigation from '../components/Navigation.astro'
 
 const pageTitle = 'Hondenkunde';
 ---
+<Navigation/>
 <Layout title={pageTitle}>
 	<main>
-		<a href="/">Home</a>
-        <a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
 		<svg
 			class="astro-a"
 			width="495"
