--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,8 +1,20 @@
 ---
----
 
-<div class="nav-links">
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/blog">Blog</a>
+---
+<div class="navigation_layout">
+    <a href="/">
+        <img src="../../public/logoHondenKunde.png" alt="Logo" width={132} height={52} />
+      </a>
+    <div class="nav-links">
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+        <a href="/blog">Blog</a>
+    </div>
 </div>
+
+<style>
+    .navigation_layout {
+        display: flex;
+        justify-content: space-between;
+    }
+</style>
