--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,28 +1,49 @@
+--- 
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+interface Props {
+	title: string;
+}
+
+const { title } = Astro.props;
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-import '../styles/global.css';
 
-const pageTitle = "Blog";
----
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="description" content="Astro description">
+		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" type="image/svg+xml" href="/paw_svg.svg" />
+		<meta name="generator" content={Astro.generator} />
+		<title>{title}</title>
+	</head>
+	<body>
+		<Header/>
+		<slot />
+		<Footer/>
+    <script>
+		 import "../scripts/menu.js";
+  </script>
+	</body>
+</html>
+<style is:global>
+	:root {
+		--accent: 214, 169, 10;
+		--accent-light: 238, 208, 122;
+		--accent-dark: 226, 180, 49;
+		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), rgb(var(--accent-light)) 30%, white 60%);
+	}
+	html {
+		font-family: system-ui, sans-serif;
+		background: #e0e1e2;
+		background-size: 224px;
+	}
+	code {
+		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+			Bitstream Vera Sans Mono, Courier New, monospace;
+	}
 
-<BaseLayout title={pageTitle}>
-	<main>
-		<h1>
-            <span class="text-gradient">{pageTitle}</span>
-        </h1>
-		<p class="instructions">
-			Hondenkunde blogs. De blogs op deze pagina geven een indepth kijkje in alle producten<br />
-			<strong>Tip:</strong> Bekijk de filmpjes van onze Friese Stabij Arti die alle producten met veel plezier test.
-		</p>
-		<ul>
-            <li><a href="/posts/post-1/">Post 1</a></li>
-            <li><a href="/posts/post-2/">Post 2</a></li>
-            <li><a href="/posts/post-3/">Post 3</a></li>
-        </ul>
-	</main>
-</BaseLayout>
-
-<style>
 	main {
 		margin: auto;
 		padding: 1rem;
