--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@ html {
 body {
   margin: 0 auto;
   width: 100%;
-  max-width: 80ch;
+  max-width: 150ch;
   padding: 1rem;
   line-height: 1.5;
 }
@@ -19,6 +19,7 @@ body {
 h1 {
   margin: 1rem 0;
   font-size: 2.5rem;
+  color: black;
 }
 
 main {
@@ -26,7 +27,7 @@ main {
   padding: 1rem;
   width: 1200px;
   max-width: calc(100% - 2rem);
-  color: white;
+  color: #141414;
   font-size: 20px;
   line-height: 1.6;
 }
@@ -72,7 +73,8 @@ h1 {
   width: 100%;
   top: 5rem;
   left: 48px;
-  background-color: #ff9776;
+  background-color: #ead269;
+  color: black;
   display: none;
   margin: 0;
 }
@@ -89,7 +91,7 @@ h1 {
 
 .nav-links a:hover,
 .nav-links a:focus {
-  background-color: #ff9776;
+  background-color: #ead269;
 }
 
 .expanded {
@@ -120,14 +122,14 @@ h1 {
   width: 40px;
   height: 5px;
   margin-bottom: 10px;
-  background-color: #ff9776;
+  background-color: #ead269;
 }
 
 .nav-links {
   width: 100%;
   top: 5rem;
   left: 48px;
-  background-color: #ff9776;
+  background-color: #ead269;
   display: none;
   margin: 0;
 }
@@ -140,10 +142,11 @@ h1 {
   font-size: 1.2rem;
   font-weight: bold;
   text-transform: uppercase;
+  color: black;
 }
 
 .nav-links a:hover, a:focus {
-  background-color: #ff9776;
+  background-color: #ead269;
 }
 
 .expanded {
