--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,7 +6,7 @@ html {
   body {
     margin: 0 auto;
     width: 100%;
-    max-width: 80ch;
+    max-width: 150ch;
     padding: 1rem;
     line-height: 1.5;
   }
@@ -18,6 +18,7 @@ html {
   h1 {
     margin: 1rem 0;
     font-size: 2.5rem;
+	color: black;
   }
 
   main {
@@ -25,7 +26,7 @@ html {
 		padding: 1rem;
 		width: 1200px;
 		max-width: calc(100% - 2rem);
-		color: white;
+		color: rgb(20, 20, 20);
 		font-size: 20px;
 		line-height: 1.6;
 	}
@@ -65,7 +66,8 @@ html {
 		width: 100%;
 		top: 5rem;
 		left: 48px;
-		background-color: #ff9776;
+		background-color: #ead269;
+		color: black;
 		display: none;
 		margin: 0;
 	  }
@@ -82,7 +84,7 @@ html {
 	  
 	  .nav-links a:hover,
 	  .nav-links a:focus {
-		background-color: #ff9776;
+		background-color: #ead269;
 	  }
 	  
 	  .expanded {
@@ -115,14 +117,14 @@ html {
 		width: 40px;
 		height: 5px;
 		margin-bottom: 10px;
-		background-color: #ff9776;
+		background-color: #ead269;
 	  }
 	  
 	  .nav-links {
 		width: 100%;
 		top: 5rem;
 		left: 48px;
-		background-color: #ff9776;
+		background-color: #ead269;
 		display: none;
 		margin: 0;
 	  }
@@ -135,10 +137,11 @@ html {
 		font-size: 1.2rem;
 		font-weight: bold;
 		text-transform: uppercase;
+		color: black;
 	  }
 	  
 	  .nav-links a:hover, a:focus {
-		background-color: #ff9776;
+		background-color: #ead269;
 	  }
 	  
 	  .expanded {
